samples/_failures_safe/1761241743_1939c8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_413e76aa.c: In function ‘main’:
./samples/SAFE/__tmp_413e76aa.c:172:16: error: expected ‘)’ at end of input
  172 |     if (len > 0
      |        ~       ^
      |                )
./samples/SAFE/__tmp_413e76aa.c:172:5: error: expected declaration or statement at end of input
  172 |     if (len > 0
      |     ^~
